<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back5"
    android:orientation="vertical"
    tools:context=".Updatefeedback">


    <TextView
        android:id="@+id/kottuwa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFC107"
        android:fontFamily="sans-serif-condensed"
        android:text="KOTTUWA"
        android:textAlignment="center"
        android:textColor="#100F0F"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/myemail1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="My Email"
        android:textColor="#0C0B0B"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/get_email1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/get_email1"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/get_feedback1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="Feed Back"
        android:textColor="#0C0C0C"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/get_feedback2"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/get_feedback2"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnedit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnedit2"
        app:cornerRadius="60px"/>

</LinearLayout>